--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!doctype html>
 <html>
+
 <head>
-<title>Homepage</title>
-<link rel="stylesheet" type="text/css" href="style.css">
+  <title>Homepage</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
 
-<h1>Deadline Day</h1>
+  <h1>Deadline Day</h1>
 
 
-<ul>
-<li><a href="index.html">Homepage</a></li>
-<li><a href="page2.html">Page 2</a></li>
-<li><a href="page3.html">Page 3</a></li>
-<li><a href="page4.html">Settings</a></li>
-</ul>
+  <ul>
+    <li><a href="index.html">Homepage</a></li>
+    <li><a href="Login.html">Login Page</a></li>
+  </ul>
 
 
 
-<div> The Deadline Day web application is a time efficient application that helps both student and members of general public by oraganising the books they have borrowed from the libary, by providing them with a variety of services, such as remotley renewing a loan book, providing a brief information abouth the books and giving reminders regarding book return deadlines.</div>
+  <div> The Deadline Day web application is a time efficient application that helps both student and members of the general public by oraganising the books they have borrowed from the libary. This is done by providing them with a variety of useful services such as
+    remotley renewing a loan book, providing a brief information about the books and giving reminders regarding book return deadlines.</div>
 
-<img class="image1" src="books1.PNG" alt="books1" width="300" height="300">
+  <img class="image1" src="books3.JPG" alt="books1" height="550" width="2560">
 
-<div class="paragraph2"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eu feugiat felis, ut gravida urna. Etiam bibendum, est sit amet porttitor suscipit, sapien augue sollicitudin odio, fermentum condimentum velit turpis vel magna. Suspendisse vel est felis. Proin posuere ante non mattis convallis. Proin iaculis risus at ultrices lobortis.</div>
-
-<footer class="footer">
-  <p> Here is a link to our GitHub page <a href="https://github.com/" target="_top">here</a> Here you can see our code.</P>
-</footer>
+  <footer class="footer">
+    <p> Here is a link to our GitHub page <a href="https://github.com/" target="_top">Click Here</a> Here you can see our code. <button class="button" type="button" onclick="alert('if you need help please contact IThelp@port.ac.uk')">Help!</button></P>
+  </footer>
 
 </body>
+
 </html>
