--- a/Page4.HTML
+++ b/Page4.HTML
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Page 4</title>
+  <title>Settings</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -11,15 +11,18 @@
   <h1>Settings</h1>
 
   <ul>
-    <li><a href="index.html">Homepage</a></li>
-    <li><a href="page2.html">Page 2</a></li>
-    <li><a href="page3.html">Page 3</a></li>
-    <li><a href="page4.html">Settings</a></li>
+    <li><a class="box" href="index.html">Homepage</a></li>
+    <li><a class="box" href="page2.html">Loans</a></li>
+    <li><a class="box" href="page3.html">Loan History</a></li>
+    <li><a class="box" href="page4.html">Settings</a></li>
   </ul>
 
-<footer class="footer">
-    <p> Here is a link to our GitHub page <a href="https://github.com/" target="_top">here</a> Here you can see our code.</P>
-</footer>
+  <div> information... </div>
+
+  <footer class="footer">
+    <p> Here is a link to our GitHub page <a href="https://github.com/" target="_top">Click Here</a> here you can see our code. <button class="button" type="button" onclick="alert('if you need help please contact IThelp@port.ac.uk')">Help!</button></P>
+  </footer>
 
 </body>
+
 </html>
