--- a/index.html
+++ b/index.html
@@ -12,20 +12,26 @@
 
 
   <ul>
-    <li><a href="index.html">Homepage</a></li>
-    <li><a href="Login.html">Login Page</a></li>
+    <li><a class="box" href="index.html">Homepage</a></li>
+    <li><a class="box" href="page2.html">Loans</a></li>
+    <li><a class="box" href="page3.html">Loan History</a></li>
+    <li><a class="box" href="page4.html">Settings</a></li>
   </ul>
 
 
 
-  <div> The Deadline Day web application is a time efficient application that helps both student and members of the general public by oraganising the books they have borrowed from the libary. This is done by providing them with a variety of useful services such as
+  <div> The Deadline Day web application is a time efficient application that helps both student and members of the general public by oraganising the books they have borrowed from the libary. This is done by providing them with a variety of useful
+    services such as
     remotley renewing a loan book, providing a brief information about the books and giving reminders regarding book return deadlines.</div>
 
-  <img class="image1" src="books3.JPG" alt="books1" height="550" width="2560">
+  <img class="image1" src="books3.JPG" alt="books1" height="450" width="1506">
 
-  <footer class="footer">
-    <p> Here is a link to our GitHub page <a href="https://github.com/" target="_top">Click Here</a> Here you can see our code. <button class="button" type="button" onclick="alert('if you need help please contact IThelp@port.ac.uk')">Help!</button></P>
-  </footer>
+
+  <div class="section2"> <img class="image2" src="books.PNG" alt="books2" height="400" width="500"> <br> <u>Features Available</u><br><br>- View Loan history<br><br>- Renew Book<br><br>- Book Recommendation<br><br>- Update Personal Settings<br><br>- Set Deadline Reminders<br><br><br></div>
+
+    <footer class="footer">
+      <p> Here is a link to our GitHub page <a href="https://github.com/" target="_top">Click Here</a> Here you can see our code. <button class="button" type="button" onclick="alert('if you need help please contact IThelp@port.ac.uk')">Help!</button></P>
+    </footer>
 
 </body>
 
