--- a/page3.html
+++ b/page3.html
@@ -8,18 +8,21 @@
 
 <body>
 
-  <h1>Page 3</h1>
+  <h1>Loan History</h1>
 
   <ul>
-    <li><a href="index.html">Homepage</a></li>
-    <li><a href="page2.html">Page 2</a></li>
-    <li><a href="page3.html">Page 3</a></li>
-    <li><a href="page4.html">Settings</a></li>
+    <li><a class="box" href="index.html">Homepage</a></li>
+    <li><a class="box" href="page2.html">Loans</a></li>
+    <li><a class="box" href="page3.html">Loan History</a></li>
+    <li><a class="box" href="page4.html">Settings</a></li>
   </ul>
 
-<footer class="footer">
-  <p> Here is a link to our GitHub page <a href="https://github.com/" target="_top">here</a> Here you can see our code.</P>
-</footer>
+  <div> information....</div>
+
+  <footer class="footer">
+    <p> Here is a link to our GitHub page <a href="https://github.com/" target="_top">Click Here</a> Here you can see our code. <button class="button" type="button" onclick="alert('if you need help please contact IThelp@port.ac.uk')">Help!</button></P>
+  </footer>
 
 </body>
+
 </html>
